# RPG

./: .gitmodules  README.md
source/: :wq  CMakeLists.txt  main.c  player.c  player.h  polygon.h
source/logic/: collider.c  collider.h  destructible.c  destructible.h  map.c  map.h  player.c  player.h  polygon.c  polygon.h  shape.c  shape.h
source/map/: test.json
source/models/: fiut.glb  jajo.glb
source/render/: ]  background.c  background.h  generic.frag  generic.vert  image.c  image.h  model.c  model.frag  model.h  point_light.h  shader.h  sprite.c  sprite.frag  sprite.h  sprite.vert  sprites.c  sprites.h  tiles.c  tiles.h
source/renderer/: generic.frag  generic.vert  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp
source/textures/: Character.ase  person.kra  person.kra~  person.png~  tile.pmg.kra  tile.pmg.kra~  tile.png~
source/textures/character/: back_walk.ase  front_walk.ase  side_walk_left.ase  side_walk_right.ase
